# qforge

./: .gitignore  LICENSE  README.md  benchmark.py  benchmark_comparison.py  benchmark_frameworks.py  benchmark_gpu.py  benchmark_qml.py  benchmark_results.json  metal_results.json  mkdocs.yml  pyproject.toml  run_benchmarks.py  setup.py  test.py
.claude/: settings.json
.claude/worktrees/agent-af1ba140/Qforge/cpp/: CMakeLists.txt
.claude/worktrees/agent-af1ba140/Qforge/cpp/bindings/: bind_backend.h  py_cuda.cpp  py_metal.mm  py_mps.cpp  py_qforge.cpp
.claude/worktrees/agent-af1ba140/Qforge/cpp/include/qforge/: cpu_backend.h  cuda_backend.h  measurement.h  metal_backend.h  mpo.h  mps.h
.claude/worktrees/agent-af1ba140/Qforge/cpp/src/: cuda_backend.cpp  cuda_kernels.cu  gates_controlled.cpp  gates_noise.cpp  gates_single.cpp  measurement.cpp  metal_backend.mm  mps_core.cpp  mps_gates.cpp  mps_meas.cpp  state_vector.cpp
.claude/worktrees/agent-af1ba140/Qforge/cpp/src/shaders/: gates.metal
.github/workflows/: docs.yml
benchmarks/: __init__.py  charts.py  compare.py  run.py  version.py
benchmarks/suites/: __init__.py  backend_compare.py  correctness.py  framework_compare.py  gate_perf.py  gradient.py  qml_algos.py  vqe.py
docs/: changelog.md  index.md
docs/api/: circuit.md  data.md  distributed.md  dmrg.md  encodings.md  gates.md  index.md  interfaces.md  ir.md  kernels.md  measurement.md  mitigation.md  mps.md  parameters.md  qasm.md  qudit_gates.md  serialization.md  visualization.md  wavefunction.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/how-to/: choose-backend.md  custom-gates.md  density-matrix.md  distributed-simulation.md  parameter-shift-gradients.md  serialize-circuits.md  standard-algorithms.md  transpile-circuits.md
docs/reference/: backend-comparison.md  benchmarks.md  encoding-catalog.md  gate-catalog.md
docs/tutorials/: 01-first-circuit.md  02-gates-and-rotations.md  03-measurement.md  04-entanglement.md  05-circuit-ir.md  06-vqe.md  07-qaoa.md  08-quantum-ml.md  09-noise-and-mitigation.md  10-mps-large-scale.md  11-chemistry.md
notebooks/: 01_quantum_circuits.ipynb  02_vqe_qaoa.ipynb  03_qml_classification.ipynb  04_qgan.ipynb  05_tensor_networks.ipynb
qforge/: __init__.py  _numpy_kernels.py  _utils.py  circuit.py  data.py  density_matrix.py  distributed.py  dmrg.py  encodings.py  gate_walk.py  gates.py  ir.py  itebd.py  kernels.py  measurement.py  mpo_builder.py  mps.py  parameters.py  qudit_gates.py  serialization.py  stabilizer.py  tebd.py  visualization.py  wavefunction.py
qforge/algo/: __init__.py  adjoint_diff.py  ansatz.py  data_reuploading.py  gradient.py  hamiltonian.py  hessian.py  metric_tensor.py  optimizers.py  (+8 more)
tests/: test_adjoint_diff.py  test_backend.py  test_chemistry.py  test_density_matrix.py  test_dmrg.py  test_ecosystem.py  test_extensions.py  test_ir.py  test_midcircuit.py  test_mitigation.py  test_mps.py  test_noise.py  test_phase1.py  test_qasm.py  test_qudit.py  test_serialization.py  test_stabilizer.py  test_standard_algos.py  test_transpiler.py
(+128 files in other folders)
