[build-system]
requires = ["setuptools>=42", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "qforge"
version = "3.0.0"
description = "qforge - Large-Scale Quantum Simulation Framework"
requires-python = ">=3.8"
dependencies = ["numpy", "scipy", "matplotlib", "numba", "pybind11", "pytest", "pytest-cov"]
